--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -26,6 +26,9 @@
       </button>
             <a class="navbar-brand" href="/home">VoteReady</a>
         </div>
+        <ul id='nav' class='navbar-nav nav'>
+            <li><a class='nsize' href='#'>AddPoll</a></li>
+        </ul>
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
             <ul class="nav navbar-nav navbar-right">
                 <% if(!currentUser) { %>
